# test2

./: .gitignore  Makefile.in  configure  configure.ac
src/: Makefile.in  main.c
